--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -4,7 +4,7 @@ name: CI
 on:
   # Triggers the workflow on push to master (including merged PRs)
   push:
-    branches: [ master ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
