--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,35 +9,17 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  update:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build:
+    runs-on: ubuntu-latest
     steps:
-    - name: Tests.
-      uses: appleboy/ssh-action@master
-      env:
-        BRANCH: ${{ github.ref_name }}
-        GOROOT: "/usr/local/go"
-        PATH: "$GOROOT/bin:$PATH"
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
       with:
-        host: michalkukla.xyz 
-        username: marlen
-        key: ${{ secrets.marlen_ssh }}
-        passphrase: ${{ secrets.marlen_ssh_pass }}
-        port: ${{ secrets.marlen_port }}
-        script_stop: true
-        envs: BRANCH,GOROOT,PATH
-        script: |
-          cd repo 
-          git stash
-          git fetch origin $BRANCH
-          git checkout $BRANCH
-          go test -coverprofile cover.out main.go main_test.go
-          git checkout main
-          git branch -r -d remotes/$BRANCH
-          git branch -D $BRANCH
+        go-version: 1.19
+
+    - name: Test
+      run: go test -v -cover ./...
