--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test PR
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on PR to features/** or cosmetic
+  # Triggers the workflow on PR to main 
   pull_request:
-    branches: [ features/**, cosmetic ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
