--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -23,3 +23,11 @@ jobs:
 
     - name: Test
       run: go test -v -cover ./...
+
+    - name: Test `go fmt && go generate` on Go 1.19 creates no diffs
+      run: go fmt && go generate && git diff --exit-code
+
+    - uses: dominikh/staticcheck-action@v1.3.0
+      with:
+        version: "2022.1.3"
+        install-go: false
